--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -677,7 +677,7 @@
                     <i class="ion-email center"></i>
                     <div class="info-content">
                         <h3>Send a message</h3>
-                        <span><%= link_to "[my-username]@gmail.com", "mailto:#{@user.username}@gmail.com" %></span>
+                        <span><%= link_to "[my-username]@gmail.com", "mailto:username@gmail.com" %></span>
                         <span>Github: <%= link_to @user.github, "https://github.com/#{@user.github}" %></span>
                     </div>
                 </div>
